[gd_scene load_steps=7 format=3 uid="uid://by0b51i22pfth"]

[ext_resource type="Script" uid="uid://cy4tdvecdr2f0" path="res://Scenes/GameUI/game_ui.gd" id="1_mjubw"]
[ext_resource type="FontFile" uid="uid://bbm3i52hyofr3" path="res://Assets/fonts/LuckiestGuy-Regular.ttf" id="1_s3w5c"]
[ext_resource type="AudioStream" uid="uid://nfulutiheo7c" path="res://Assets/audio/game_over.wav" id="3_smc31"]

[sub_resource type="LabelSettings" id="LabelSettings_mjubw"]
font = ExtResource("1_s3w5c")
font_size = 30
outline_size = 4
outline_color = Color(0, 0, 0, 1)
shadow_size = 6
shadow_color = Color(0, 0, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_smc31"]
font = ExtResource("1_s3w5c")
font_size = 40
outline_size = 4
outline_color = Color(0, 0, 0, 1)
shadow_size = 6
shadow_color = Color(0, 0, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_0u7gi"]
font = ExtResource("1_s3w5c")
font_size = 30
outline_size = 4
outline_color = Color(0, 0, 0, 1)
shadow_size = 6
shadow_color = Color(0, 0, 0, 1)

[node name="GameUI" type="Control"]
process_mode = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_mjubw")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 24
theme_override_constants/margin_top = 24
theme_override_constants/margin_right = 24
theme_override_constants/margin_bottom = 24

[node name="ScoreLabel" type="Label" parent="MarginContainer"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0
text = "000"
label_settings = SubResource("LabelSettings_mjubw")

[node name="GameOverLabel" type="Label" parent="MarginContainer"]
visible = false
layout_mode = 2
size_flags_horizontal = 4
text = "GAME OVER!"
label_settings = SubResource("LabelSettings_smc31")

[node name="PressSpaceLabel" type="Label" parent="MarginContainer"]
visible = false
layout_mode = 2
size_flags_horizontal = 4
text = "press space"
label_settings = SubResource("LabelSettings_0u7gi")

[node name="Timer" type="Timer" parent="MarginContainer"]
wait_time = 2.0
one_shot = true

[node name="Sound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("3_smc31")

[connection signal="timeout" from="MarginContainer/Timer" to="." method="_on_timer_timeout"]
